# reverend

./: .gitignore  AUTHORS  README.rst  current_status.txt
cpp/: CMakeLists.txt
cpp/src/: compactkernel.hpp  config.hpp  costfuncs.hpp  crossval.hpp  cumulative.hpp  data.hpp  distrib.hpp  filter.hpp  io.hpp  kbr.hpp  kbrcpp.cpp  kbrfilter.cpp  kbrquantiles.cpp  kbrregressor.cpp  kernel.hpp  lowrank.hpp  lowrankregressor.hpp  matvec.hpp  preimage.hpp  reducedset.hpp  regressor.hpp  rkhs.hpp  skbrcpp.cpp  sparsecostfuncs.hpp  sparsecrossval.hpp  sparsedistrib.hpp  sparsepreimage.hpp  sparseregressor.hpp  sparsetrain.hpp  train.hpp
demo/: demo_filtering.py  demo_filtering2.py  demo_jura_regression.py  demo_quantiles.py  demo_regression.py  demo_sparse.py  lorenz.npy  visualise_filtering.py
quadprog/: eiquadprog.hpp
reverend/: distrib.py  kbrcpp.py  matvec.py  preimage.py
